# register_generator

./: Cargo.toml  README.md
data/schema/: module_description.json
src/: generator.rs  main.rs  module_description.rs  module_generator.rs  register_description.rs  vhdl_generator.rs
tests/: avalon_module.json  full_module.json  simple_module.json
