[package]
name = "register_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = [ "cargo" ] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-json-schema = "0.1.0"
regex = "1"
source_generator = "0.0.2"
